--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rust_decimal = "1.7.0"
+rust_decimal = "1.8.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "lob"
+harness = false
 
 [profile.bench]
 opt-level = 3
@@ -15,3 +22,4 @@ panic = "abort"
 
 [profile.release]
 panic = "abort"
+
